fiv/ hope it fix video on mobile

--- a/src/components/HandDetection/HandDetection.css
+++ b/src/components/HandDetection/HandDetection.css
@@ -28,6 +28,8 @@
   z-index: 9;
   -webkit-filter: brightness(0.1) grayscale(100%); /* Safari 6.0 - 9.0 */
   filter: brightness(0.5) grayscale(100%);
+  max-width: 100%;
+  object-fit: cover;
 }
 .handCanvas {
   position: absolute;
